[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/PopulatedMapScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/autosave.png" type="Texture" id=3]
[ext_resource path="res://addons/paulloz.colorblindness/colorblindness.material" type="Material" id=4]
[ext_resource path="res://addons/paulloz.colorblindness/colorblindness.gd" type="Script" id=5]
[ext_resource path="res://addons/paulloz.colorblindness/icon.svg" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="UI"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="StatsButton" type="Button" parent="UI/Control"]
margin_left = 16.0
margin_top = 504.0
margin_right = 96.0
margin_bottom = 562.0
hint_tooltip = "View and upgrade character stats"
text = "Stats"

[node name="EquipmentButton" type="Button" parent="UI/Control"]
margin_left = 126.0
margin_top = 504.0
margin_right = 292.0
margin_bottom = 562.0
hint_tooltip = "Change equipment"
text = "Equipment"

[node name="KeyItemsButton" type="Button" parent="UI/Control"]
margin_left = 306.0
margin_top = 504.0
margin_right = 464.0
margin_bottom = 562.0
hint_tooltip = "Look at key items found"
text = "Key Items"

[node name="SaveButton" type="Button" parent="UI/Control"]
margin_left = 476.0
margin_top = 504.0
margin_right = 560.0
margin_bottom = 562.0
hint_tooltip = "Save or load game"
text = "Save"

[node name="AutoSave" type="Sprite" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 8, 8 )
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="UI/AutoSave"]
margin_left = 42.0
margin_top = -8.0
margin_right = 206.0
margin_bottom = 34.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Auto-saving ..."

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Colorblindness" type="ColorRect" parent="CanvasLayer"]
visible = false
material = ExtResource( 4 )
margin_right = 960.0
margin_bottom = 576.0
rect_min_size = Vector2( 960, 576 )
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}
Type = 0
[connection signal="closed_save_manager" from="UI" to="." method="_on_UI_closed_save_manager"]
[connection signal="opened_save_manager" from="UI" to="." method="_on_UI_opened_save_manager"]
[connection signal="pressed" from="UI/Control/StatsButton" to="UI" method="_on_StatsButton_pressed"]
[connection signal="pressed" from="UI/Control/EquipmentButton" to="UI" method="_on_EquipmentButton_pressed"]
[connection signal="pressed" from="UI/Control/KeyItemsButton" to="UI" method="_on_KeyItemsButton_pressed"]
[connection signal="pressed" from="UI/Control/SaveButton" to="UI" method="_on_SaveButton_pressed"]
